api-orders/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-orders
  namespace: payetonkawa-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db-orders
  template:
    metadata:
      labels:
        app: db-orders
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage-orders
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: db-storage-orders
          persistentVolumeClaim:
            claimName: db-pvc-orders
