api-orders/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-orders
  namespace: payetonkawa
  labels:
    app: api-orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-orders
  template:
    metadata:
      labels:
        app: api-orders
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api-orders
          image: ghcr.io/mspr-epsi-24-26/api-orders:b588add2ae4c6df7d94d58456e1d6005a7a626b6
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
