api-orders/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-orders-service
  namespace: api-orders
spec:
  type: ClusterIP
  selector:
    app: api-orders
  ports:
    - port: 3001
      targetPort: 3000
